deploy: ac66aa39cad962d37edfd3cd2c8bbfcff94767e5

--- a/06-team-block-diagram/index.html
+++ b/06-team-block-diagram/index.html
@@ -848,24 +848,22 @@
   <h1>Team Block Diagram</h1>
 
 <h2 id="introduction">Introduction</h2>
-<p>Our team designed a hub-and-spoke block diagram for the clap-activated smart light project. The Master Controller (Caleb) serves as the Hub, coordinating signals from the Audio Front-End (Aaron), Output Driver (Roshan), and UI/Status Board (Quinn). Each board is based on the PIC18F57Q43 Curiosity Nano and communicates via an 8-pin ribbon cable standard.</p>
+<p><strong>Bold Text</strong>
+<em>Italic Text</em>
+<strong><em>Bold and Italic Text</em></strong></p>
 <h2 id="research-question">Research Question</h2>
 <ul>
-<li>How can we design a modular clap-activated smart light using distributed microcontrollers?</li>
-<li>Which subsystem should handle audio filtering, user interaction, and lamp switching for best reliability?</li>
-<li>How can the hub coordinate signals with minimal false triggers?</li>
+<li>Bullet Point 1</li>
+<li>Bullet Point 2</li>
+<li>Bullet Point 3</li>
 </ul>
 <h2 id="images">Images</h2>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://idealab.asu.edu/assets/images/research/jumper1.png" data-desc-position="bottom"><img alt="image caption" src="https://idealab.asu.edu/assets/images/research/jumper1.png"></a></p>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="Image01.jpg" data-desc-position="bottom"><img alt="dead bug circuit" height:_300_="height:&quot;300;&quot;" src="Image01.jpg" style="style" width:_350_="width:&quot;350&quot;"></a>
-<strong>Figure 2:</strong> Early PCB working design</p>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="ImageShowcase.png" data-desc-position="bottom"><img alt="showcase" src="ImageShowcase.png"></a>
-<strong>Figure 3:</strong> Innovation Showcase Spring '25, where the products were a STEM-themed display that demonstrates a single scientific/engineering concept with the intended user of K-12 students interested in learning about science, technology, engineering, or math.</p>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/egr304-team204-block-diagram-hub.drawio.png" data-desc-position="bottom"><img alt="image caption" src="../image/egr304-team204-block-diagram-hub.drawio.png"></a></p>
 <h2 id="results">Results</h2>
 <ol>
-<li>The system is organized using a hub-and-spoke model, with Caleb’s board as the central controller.</li>
-<li>Each teammate has one subsystem: audio input, output driver, UI/status, and system coordination.</li>
-<li>The 8-pin ribbon connector standard ensures consistent power, ground, and communication lines across all boards.</li>
+<li>Numbered Point 1</li>
+<li>Numbered Point 2</li>
+<li>Numbered Point 3</li>
 </ol>
 <h2 id="conclusions-and-future-work">Conclusions and Future Work</h2>
 <h2 id="external-links">External Links</h2>
