--- a/06-team-block-diagram/index.html
+++ b/06-team-block-diagram/index.html
@@ -856,11 +856,7 @@
 <li>How can the hub coordinate signals with minimal false triggers?</li>
 </ul>
 <h2 id="images">Images</h2>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="https://idealab.asu.edu/assets/images/research/jumper1.png" data-desc-position="bottom"><img alt="image caption" src="https://idealab.asu.edu/assets/images/research/jumper1.png"></a></p>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="Image01.jpg" data-desc-position="bottom"><img alt="dead bug circuit" height:_300_="height:&quot;300;&quot;" src="Image01.jpg" style="style" width:_350_="width:&quot;350&quot;"></a>
-<strong>Figure 2:</strong> Early PCB working design</p>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="ImageShowcase.png" data-desc-position="bottom"><img alt="showcase" src="ImageShowcase.png"></a>
-<strong>Figure 3:</strong> Innovation Showcase Spring '25, where the products were a STEM-themed display that demonstrates a single scientific/engineering concept with the intended user of K-12 students interested in learning about science, technology, engineering, or math.</p>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/egr304-team204-block-diagram-hub.drawio.png" data-desc-position="bottom"><img alt="image caption" src="../image/egr304-team204-block-diagram-hub.drawio.png"></a></p>
 <h2 id="results">Results</h2>
 <ol>
 <li>The system is organized using a hub-and-spoke model, with Caleb’s board as the central controller.</li>
