--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
   <h1>Home</h1>
 
 <p></p><center>
-<font size="8">Project Name<br>
+<font size="8">ClapSense<br>
 <font size="5">Team 204<br>
 <strong>Submission: September, 05, 2025</strong><br>
 Fall 2025<br>
@@ -711,11 +711,8 @@ Fall 2025<br>
 Dr. Kevin Nichols<br><p></p>
 <p></p></font></font></font></center><p></p><font size="8"><font size="5"><font size="4">
 <h2 id="team-introduction">Team Introduction</h2>
-<blockquote>
-<p>This will be updated as part of the preparation for the External Review.<br>
-   * This needs to be updated to reflect a team introduction.<br>
-   * Content should also help an unfamiliar reader navigate to areas of interest.</p>
-</blockquote>
+<p>Team 204 is a group of engineering students who share the goal of designing a reliable and easy-to-use clap-activated smart light. Each member brings unique skills to the table, and together we created a modular system that connects multiple boards into one cohesive design. This hub-and-spoke setup allows our project to operate efficiently, with clear communication between the controller, audio input, output driver, and user interface.</p>
+<p>As a team, we value collaboration, creativity, and clear communication. We are motivated by the idea that engineering should make everyday life easier and more accessible. Our project reflects that goal by transforming a simple clap into a dependable and modern way to control light.</p>
 <h2 id="team-members-datasheet-links">Team Members Datasheet links</h2>
 <table>
 <thead>
