deploy: 4de3da6546f4ff5b7bb49f38d30ccadc6943f872

--- a/02-Team-Organization/index.html
+++ b/02-Team-Organization/index.html
@@ -704,10 +704,7 @@
   <h1>Team Organization</h1>
 
 <h2 id="team-charter">Team Charter</h2>
-<p>From the ... which can be reviewed in <a href="https://embedded-systems-design.github.io/EGR304TeamTemplate/Appendix/App-Team-Org/">"Appendix: Team Organization"</a>, the team's charter formed to be (showing ASU's Charter as an Example):</p>
-<blockquote>
-<p>"ASU is a comprehensive public research university, measured not by whom it excludes, but by whom it includes and how they succeed; advancing research and discovery of public value; and assuming fundamental responsibility for the economic, social, cultural and overall health of the communities it serves." (ASU's Charter)</p>
-</blockquote>
+<p>Team 204 is dedicated to designing a reliable and user-friendly clap-activated smart light that improves everyday living. We value collaboration, accountability, and clear communication while using each member’s strengths to achieve high technical standards. Our goal is to create innovative solutions that reflect ASU’s commitment to inclusion, discovery, and positive community impact.</p>
 <h2 id="product-mission-statement">Product Mission Statement</h2>
 <p>Our mission is to design and deliver reliable embedded systems that consistently perform under real-world conditions. We achieve this through clear communication, balanced teamwork, and leveraging each member’s strengths. By producing professional documentation and well-structured code, we ensure our system’s long-term usability and maintainability. Above all, we strive to create a collaborative and respectful culture where every member contributes, ensuring our projects embody both technical excellence and the vision of our team.</p>
 
