--- a/03-User-Needs-and Benchmarking/index.html
+++ b/03-User-Needs-and Benchmarking/index.html
@@ -1304,15 +1304,12 @@
 <p><strong>Category / Meta-Needs:</strong><br>
 - <strong>Home Climate Control and Energy Management</strong> — Maintain satisfactory temperatures while cutting waste with easy app usage, system monitoring, and compatibility.</p>
 <h2 id="consolidated-need-categories-meta-needs">Consolidated Need Categories &amp; Meta-Needs</h2>
-<blockquote>
-<p><strong>Screenshots:</strong> Insert three images showing<br>
-1) all needs collected<br>
+<p>1) all needs collected<br>
 <a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/Screenshot%202025-09-15%20210305.png" data-desc-position="bottom"><img alt="All Needs" src="../image/Screenshot%202025-09-15%20210305.png"></a><br>
-2) grouped by category<br>
+ 2) grouped by category<br>
 <a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/Screenshot%202025-09-15%20210923.png" data-desc-position="bottom"><img alt="Grouped Needs" src="../image/Screenshot%202025-09-15%20210923.png"></a><br>
-3) ranked<br>
+ 3) ranked<br>
 <a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/Screenshot%202025-09-15%20211207.png" data-desc-position="bottom"><img alt="Ranked Needs" src="../image/Screenshot%202025-09-15%20211207.png"></a></p>
-</blockquote>
 <h2 id="prioritized-top-needs">Prioritized Top Needs</h2>
 <ol>
 <li>Performance</li>
@@ -1321,9 +1318,6 @@
 <li>Convenience</li>
 <li>Maintainence</li>
 </ol>
-<blockquote>
-<p><strong>Ranking method:</strong> frequency in reviews (quantified counts), impact on safety/utility, and team vote (weighted 50/30/20).</p>
-</blockquote>
 
 
 
