deploy: de92670cda2bfc24f97898aab1810e213e861820

--- a/04-Product-Requirements/index.html
+++ b/04-Product-Requirements/index.html
@@ -790,59 +790,18 @@
 <p>Arleta is someone who values convenience and ease in her daily life. She often found herself frustrated by having to constantly get up just to turn things off. That small but repeated hassle wore her down over time.</p>
 <p>With her new clap-activated device, everything changed. Now, a simple clap of her hands allows her to control it without leaving her spot. She loves the newfound freedom and simplicity—it feels empowering to handle things effortlessly. For Arleta, this small feature means less interruption in her day and more comfort in her home.</p>
 <h2 id="aspects">Aspects</h2>
-<ol>
-<li>
-<p><strong>Hardware / Product Design</strong></p>
-<ul>
-<li>LED</li>
-<li>PIC18F57Q43 Curiosity Nano Board</li>
-<li>Various resistors</li>
-<li>Wires</li>
-<li>Sound sensors</li>
-<li>Breadboard</li>
-<li>Curisity Nano Cable</li>
-</ul>
-</li>
-<li>
-<p><strong>Software / Functionality</strong></p>
-<ul>
-<li>The product will have the implementation of Nano Board Coding</li>
-<li>The product shall have one sensor to detect the user.</li>
-</ul>
-</li>
-<li>
-<p><strong>User Experience</strong></p>
-<ul>
-<li>The product shall be easy to setup and implement</li>
-<li>The product will require the user to clap to toggle light</li>
-</ul>
-</li>
-<li>
-<p><strong>Customization</strong></p>
-<ul>
-<li>The product shall offer customizable decibel levels for detection</li>
-<li>The product shall offer customizable amounts of claps for toggling</li>
-<li>The product shall offer multiple different LED light colors.</li>
-</ul>
-</li>
-<li>
-<p><strong>Manufacturing</strong></p>
-<ul>
-<li>The product will be designed with circuitry on a breadboard.</li>
-<li>Functioning of the device shall be easy to assess by a manufacturing.</li>
-<li>The total cost price of the produce shall be &lt;$30.</li>
-<li>The product shall be designed to consist of the minimum possible amount of parts.</li>
-</ul>
-</li>
-<li>
-<p><strong>Safety</strong></p>
-<ul>
-<li>Powered by USB 5 V from Curiosity Nano board (no exposed mains in prototype).</li>
-<li>All wiring on breadboard must avoid shorts; use resistors to limit LED current to ≤20 mA.</li>
-<li>Relay or MOSFET switching stage must include flyback protection.</li>
-</ul>
-</li>
-</ol>
+<p><strong>1. Hardware / Product Design</strong><br>
+The product should operate at a safe low-voltage level below five volts and be compact enough for a small desk or bedside setup. All components should fit within a housing that can handle regular use without breaking or overheating. The design should allow easy connection between boards using a consistent interface.  </p>
+<p><strong>2. Software / Functionality</strong><br>
+The system should detect claps within a range of one to three meters with at least ninety percent accuracy. It should process and respond to valid input in under two hundred milliseconds and operate continuously for long periods without errors or resets.  </p>
+<p><strong>3. User Experience</strong><br>
+The device should be simple for a new user to set up in under ten minutes. It should clearly indicate when it is on, off, or waiting for a signal. The experience should feel reliable and intuitive so users can interact with it without confusion or technical knowledge.  </p>
+<p><strong>4. Customization</strong><br>
+The system should allow users to adjust sensitivity levels and the number of claps required for activation. It should also support different light brightness levels or colors for comfort and preference.  </p>
+<p><strong>5. Manufacturing</strong><br>
+The total production cost should remain under thirty dollars, and the design should use a minimal number of parts to simplify assembly and reduce failure points. The device should be consistent and reliable after multiple uses.  </p>
+<p><strong>6. Safety</strong><br>
+The system should prevent short circuits, maintain safe operating temperatures, and protect against overcurrent conditions. All wiring and enclosures should minimize electrical hazards and comply with basic safety standards for low-voltage devices.  </p>
 <h2 id="requirement-criteria-specifications">Requirement Criteria Specifications</h2>
 <ul>
 <li>
