--- a/06-team-block-diagram/index.html
+++ b/06-team-block-diagram/index.html
@@ -776,7 +776,7 @@
   <h1>Team Block Diagram</h1>
 
 <h2 id="introduction">Introduction</h2>
-<p>Our team designed a hub-and-spoke block diagram for the clap-activated smart light project. The Master Controller (Caleb) serves as the Hub, coordinating signals from the Audio Front-End (Aaron), Output Driver (Roshan), and UI/Status Board (Quinn). Each board is based on the PIC18F57Q43 Curiosity Nano and communicates via an 8-pin ribbon cable standard.</p>
+<p>Our team designed a hub-and-spoke block diagram for the clap-activated smart light project. The Master Controller (Caleb) serves as the Hub, coordinating signals from the Audio Front-End (Aaron), Filter Board (Quinn), and Sensor Front-End (Roshan). Each board is based on the PIC18F57Q43 Curiosity Nano and communicates via an 8-pin ribbon cable standard. The Hub also drives the lamp actuator, which serves as the system’s main physical output.</p>
 <h2 id="research-question">Research Question</h2>
 <ul>
 <li>How can we design a modular clap-activated smart light using distributed microcontrollers?</li>
@@ -788,7 +788,13 @@
 <h2 id="results">Results</h2>
 <ol>
 <li>The system is organized using a hub-and-spoke model, with Caleb’s board as the central controller.</li>
-<li>Each teammate has one subsystem: audio input, output driver, UI/status, and system coordination.</li>
+<li>Each teammate has one subsystem:<ul>
+<li>Caleb: Master Controller (Hub) – coordinates inputs and controls the lamp actuator</li>
+<li>Aaron: Audio Front-End – detects clap signals using a microphone and op-amp</li>
+<li>Roshan: Sensor Front-End – measures ambient light levels for adaptive brightness</li>
+<li>Quinn: Filter Board – processes potentiometer inputs and displays system status using LEDs</li>
+</ul>
+</li>
 <li>The 8-pin ribbon connector standard ensures consistent power, ground, and communication lines across all boards.</li>
 </ol>
 <h2 id="conclusions-and-future-work">Conclusions and Future Work</h2>
