--- a/03-User-Needs-and Benchmarking/index.html
+++ b/03-User-Needs-and Benchmarking/index.html
@@ -1305,11 +1305,11 @@
 - <strong>Home Climate Control and Energy Management</strong> — Maintain satisfactory temperatures while cutting waste with easy app usage, system monitoring, and compatibility.</p>
 <h2 id="consolidated-need-categories-meta-needs">Consolidated Need Categories &amp; Meta-Needs</h2>
 <p>1) all needs collected<br>
-<a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/Screenshot%202025-09-15%20210305.png" data-desc-position="bottom"><img alt="All Needs" src="../image/Screenshot%202025-09-15%20210305.png"></a><br>
+<a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/100Solutions.png" data-desc-position="bottom"><img alt="All Needs" src="../image/100Solutions.png"></a><br>
  2) grouped by category<br>
-<a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/Screenshot%202025-09-15%20210923.png" data-desc-position="bottom"><img alt="Grouped Needs" src="../image/Screenshot%202025-09-15%20210923.png"></a><br>
+<a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/Solutions_grouped.png" data-desc-position="bottom"><img alt="Grouped Needs" src="../image/Solutions_grouped.png"></a><br>
  3) ranked<br>
-<a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/Screenshot%202025-09-15%20211207.png" data-desc-position="bottom"><img alt="Ranked Needs" src="../image/Screenshot%202025-09-15%20211207.png"></a></p>
+<a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/Solutions_Ranked.png" data-desc-position="bottom"><img alt="Ranked Needs" src="../image/Solutions_Ranked.png"></a></p>
 <h2 id="prioritized-top-needs">Prioritized Top Needs</h2>
 <ol>
 <li>Performance</li>
