deploy: baf1abc6bf09c02fcbcad035285022a30403b019

--- a/03-User-Needs-and Benchmarking/index.html
+++ b/03-User-Needs-and Benchmarking/index.html
@@ -1312,11 +1312,11 @@
 <a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/Solutions_Ranked.png" data-desc-position="bottom"><img alt="Ranked Needs" src="../image/Solutions_Ranked.png"></a></p>
 <h2 id="prioritized-top-needs">Prioritized Top Needs</h2>
 <ol>
-<li>Performance</li>
-<li>User interaction</li>
-<li>Reliability</li>
-<li>Convenience</li>
-<li>Maintainence</li>
+<li>Filter irrelevant noise to minimize unwanted activations</li>
+<li>Should allow both anual and remote control</li>
+<li>Should be adjustable</li>
+<li>Consistent, quiet operation</li>
+<li>Simple, tool-free battery replacement</li>
 </ol>
 
 
