--- a/07-Software Proposal/index.html
+++ b/07-Software Proposal/index.html
@@ -806,9 +806,8 @@
   <h1>Software Proposal</h1>
 
 <h2 id="introduction">Introduction</h2>
-<p>Our software architecture defines the logical flow and decision-making process for the ClapSense product.<br>
-The system operates in a continuous loop, processing audio signals, evaluating thresholds, and updating light output and brightness based on detected input.</p>
-<p>This diagram illustrates how each subsystem — Initialization, Input Reading, Output Setting, and State Updating — interacts under the control of the PIC18F57Q43 Curiosity Nano microcontroller.</p>
+<p>Our software design shows how the ClapSense system makes decisions and runs its internal processes. The program operates in a continuous loop that listens for sounds, checks audio levels, and adjusts the light brightness or power based on what it detects.</p>
+<p>The diagram highlights how each part of the system including initialization, input reading, output control, and state updates works together under the PIC18F57Q43 Curiosity Nano microcontroller.</p>
 <h2 id="system-level-activity-diagram">System-Level Activity Diagram</h2>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/SoftwareProposal.drawio.png" data-desc-position="bottom"><img alt="image caption" src="../image/SoftwareProposal.drawio.png"></a></p>
 <h3 id="initialize-system">Initialize System</h3>
