--- a/07-Software Proposal/index.html
+++ b/07-Software Proposal/index.html
@@ -809,7 +809,8 @@
 <p>Our software design shows how the ClapSense system makes decisions and runs its internal processes. The program operates in a continuous loop that listens for sounds, checks audio levels, and adjusts the light brightness or power based on what it detects.</p>
 <p>The diagram highlights how each part of the system including initialization, input reading, output control, and state updates works together under the PIC18F57Q43 Curiosity Nano microcontroller.</p>
 <h2 id="system-level-activity-diagram">System-Level Activity Diagram</h2>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/SoftwareProposal.drawio.png" data-desc-position="bottom"><img alt="image caption" src="../image/SoftwareProposal.drawio.png"></a></p>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/SoftwareProposal.drawio.png" data-desc-position="bottom"><img alt="Software Proposal Diagram" src="../image/SoftwareProposal.drawio.png"></a>
+<a href="Software-Proposal.drawio">Download Source (.drawio)</a></p>
 <h3 id="initialize-system">Initialize System</h3>
 <ul>
 <li>Configures hardware registers and resets internal variables.  </li>
