deploy: 2d9b7b17047e887fc92593f168fe57ac10f305fb

--- a/07-Software Proposal/index.html
+++ b/07-Software Proposal/index.html
@@ -810,7 +810,7 @@
 <p>The diagram highlights how each part of the system including initialization, input reading, output control, and state updates works together under the PIC18F57Q43 Curiosity Nano microcontroller.</p>
 <h2 id="system-level-activity-diagram">System-Level Activity Diagram</h2>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/SoftwareProposal.drawio.png" data-desc-position="bottom"><img alt="Software Proposal Diagram" src="../image/SoftwareProposal.drawio.png"></a>
-<a href="Software-Proposal.drawio">Download Source (.drawio)</a></p>
+<a href="https://drive.google.com/file/d/1XWd2HWFe6WUE2Gx3-sKtdRthA2hVnKsh/view?usp=sharing">Web Source (.drawio)</a></p>
 <h3 id="initialize-system">Initialize System</h3>
 <ul>
 <li>Configures hardware registers and resets internal variables.  </li>
