deploy: cf4bf3bd9f6a1670890450919183a8977b494529

--- a/07-Software Proposal/index.html
+++ b/07-Software Proposal/index.html
@@ -862,7 +862,7 @@
   Developed the sound detection and filtering logic. Configured the microphone and amplifier circuit using the MCP6022 op-amp and implemented ADC-based sampling to identify clap patterns while rejecting background noise.</p>
 <p><strong>Roshan Roy Geoffrey Joe – Sensor Front-End</strong><br>
   Designed and coded the light-sensing functionality using the TEMT6000 phototransistor and op-amp stage. Configured ADC and DAC modules to translate sensor data into adjustable brightness feedback signals.</p>
-<p><strong>Quinn Maness – Filter and UI Board</strong><br>
+<p><strong>Quinn Maness – Filter Board</strong><br>
   Implemented the user interface and visual feedback system. Controlled LED indicators and potentiometers for brightness adjustment. Created status cues for system states (ON, OFF, and Brightness Levels) through PWM-driven LEDs.</p>
 <h2 id="references">References</h2>
 <ul>
