deploy: 39f40b994a8fc3b746e656cb5f6bb1c3eee6100b

--- a/07-Software Proposal/index.html
+++ b/07-Software Proposal/index.html
@@ -857,13 +857,13 @@
 </ul>
 <h3 id="team-members-and-roles">Team Members and Roles</h3>
 <p><strong>Caleb Yuen – Master Controller (Hub)</strong><br>
-  Designed the main control logic that coordinates all subsystems. Handles initialization, communication, and signal management between boards. Manages the decision-making process that interprets clap inputs and triggers the light output sequence.</p>
+  Developed the theoretical control logic for how the system coordinates all subsystems. Planned the initialization sequence, communication structure, and signal flow between boards.</p>
 <p><strong>Aaron Kiem – Audio Front-End</strong><br>
-  Developed the sound detection and filtering logic. Configured the microphone and amplifier circuit using the MCP6022 op-amp and implemented ADC-based sampling to identify clap patterns while rejecting background noise.</p>
+  ...</p>
 <p><strong>Roshan Roy Geoffrey Joe – Sensor Front-End</strong><br>
-  Designed and coded the light-sensing functionality using the TEMT6000 phototransistor and op-amp stage. Configured ADC and DAC modules to translate sensor data into adjustable brightness feedback signals.</p>
+  ....</p>
 <p><strong>Quinn Maness – Filter Board</strong><br>
-  Implemented the user interface and visual feedback system. Controlled LED indicators and potentiometers for brightness adjustment. Created status cues for system states (ON, OFF, and Brightness Levels) through PWM-driven LEDs.</p>
+  ...</p>
 <h2 id="references">References</h2>
 <ul>
 <li><a href="https://ww1.microchip.com/downloads/aemDocuments/documents/MCU08/ProductDocuments/UserGuides/PIC18F57Q43-Curiosity-Nano-HW-UserGuide-DS40002186B.pdf">Curiosity Nano hardware user guide</a></li>
