--- a/07-Software Proposal/index.html
+++ b/07-Software Proposal/index.html
@@ -859,7 +859,7 @@
 <p><strong>Caleb Yuen – Master Controller (Hub)</strong><br>
   Developed the theoretical control logic for how the system coordinates all subsystems. Planned the initialization sequence, communication structure, and signal flow between boards.</p>
 <p><strong>Aaron Kiem – Audio Front-End</strong><br>
-  ...</p>
+  Developed the sound detection and filtering logic. Configured the microphone and amplifier circuit using the MCP6022 op-amp and implemented ADC-based sampling to identify clap patterns while rejecting background noise.</p>
 <p><strong>Roshan Roy Geoffrey Joe – Sensor Front-End</strong><br>
   ....</p>
 <p><strong>Quinn Maness – Filter Board</strong><br>
