deploy: 6d8e998609eeafa6a06c28cfcd44b12c4470c70a

--- a/07-Software Proposal/index.html
+++ b/07-Software Proposal/index.html
@@ -861,7 +861,7 @@
 <p><strong>Aaron Kiem – Audio Front-End</strong><br>
   Developed the sound detection and filtering logic. Configured the microphone and amplifier circuit using the MCP6022 op-amp and implemented ADC-based sampling to identify clap patterns while rejecting background noise.</p>
 <p><strong>Roshan Roy Geoffrey Joe – Sensor Front-End</strong><br>
-  ....</p>
+  Developed the update state logic to direct the power to the light for dimming and general purposes. Configured the potentiometer to adjust the light's brightness and implemeted a manual switch to turn the light on and off as well. Also inputed a method to read values from the filter board to know wheter to turn the light on or off.</p>
 <p><strong>Quinn Maness – Filter Board</strong><br>
   ...</p>
 <h2 id="references">References</h2>
