--- a/07-Software Proposal/index.html
+++ b/07-Software Proposal/index.html
@@ -860,10 +860,10 @@
   Developed the theoretical control logic for how the system coordinates all subsystems. Planned the initialization sequence, communication structure, and signal flow between boards.</p>
 <p><strong>Aaron Kiem – Audio Front-End</strong><br>
   Developed the sound detection and filtering logic. Configured the microphone and amplifier circuit using the MCP6022 op-amp and implemented ADC-based sampling to identify clap patterns while rejecting background noise.</p>
+<p><strong>Quinn Maness – Filter Board</strong><br>
+  Developed the filtering and filter adjustment system for the clap sound logic. Utilized a window comparator circuit and the active band-pass device (BA3835F-E2) in order to create the filter threshold for decibel level and frequency, respectively. Implemented potentiometers onto both systems in order to allow for user adjustment of the threshold ranges for both frequency and decibel.</p>
 <p><strong>Roshan Roy Geoffrey Joe – Sensor Front-End</strong><br>
   Developed the update state logic to direct the power to the light for dimming and general purposes. Configured the potentiometer to adjust the light's brightness and implemeted a manual switch to turn the light on and off as well. Also inputed a method to read values from the filter board to know wheter to turn the light on or off.</p>
-<p><strong>Quinn Maness – Filter Board</strong><br>
-  ...</p>
 <h2 id="references">References</h2>
 <ul>
 <li><a href="https://ww1.microchip.com/downloads/aemDocuments/documents/MCU08/ProductDocuments/UserGuides/PIC18F57Q43-Curiosity-Nano-HW-UserGuide-DS40002186B.pdf">Curiosity Nano hardware user guide</a></li>
