deploy: 46607a1563ec339ab614b3c2ed09a3689a996ea6

--- a/06-team-block-diagram/index.html
+++ b/06-team-block-diagram/index.html
@@ -792,13 +792,13 @@
 <li>Caleb: Master Controller (Hub) – coordinates inputs and controls the lamp actuator</li>
 <li>Aaron: Audio Front-End – detects clap signals using a microphone and op-amp</li>
 <li>Roshan: Sensor Front-End – measures ambient light levels for adaptive brightness</li>
-<li>Quinn: Filter Board – processes potentiometer inputs and displays system status using LEDs</li>
+<li>Quinn: Filter Board – filters audio inputs with potentiometer-determined thresholds and gives outputs</li>
 </ul>
 </li>
 <li>The 8-pin ribbon connector standard ensures consistent power, ground, and communication lines across all boards.</li>
 </ol>
 <h2 id="conclusions-and-future-work">Conclusions and Future Work</h2>
-<p>We have quite a bit that we need to further elaborate on. The intricacies of the actual subsystems and how they will all interact alongside the code will likely be a complicated task that will require skilled teamwork. Getting the separate code from each individual design to work in conjunction will likely be very difficult. We will also need to figure out what system of UI we will use, such as analog or digital, as this is an area that we have less experience with. As a whole, the block diagram will prove to be extremely useful in terms of simplifying the design into easily understood and visualized compartments. However, actually implementing such a design in practice will require more extensive research.</p>
+<p>We have quite a bit that we need to further elaborate on. The intricacies of the actual subsystems and how they will all interact alongside the code will likely be a complicated task that will require skilled teamwork. Getting the separate code from each individual design to work in conjunction will likely be very difficult. As a whole, the block diagram will prove to be extremely useful in terms of simplifying the design into easily understood and visualized compartments. However, actually implementing such a design in practice will require more extensive research.</p>
 <h2 id="references">References</h2>
 <p><a href="https://ww1.microchip.com/downloads/aemDocuments/documents/MCU08/ProductDocuments/UserGuides/PIC18F57Q43-Curiosity-Nano-HW-UserGuide-DS40002186B.pdf">Curiosity Nano hardware user guide</a></p>
 
