deploy: 30c0691f5d91789bc295826eb6a4a9b47d120498

--- a/05-design-ideation/index.html
+++ b/05-design-ideation/index.html
@@ -1415,7 +1415,10 @@
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/Ranking.png" data-desc-position="bottom"><img alt="Aaron's Ranking" src="../image/Ranking.png"></a></p>
 <h2 id="basic-clap-light-cadd-model">Basic Clap Light CADD Model</h2>
 <h4 id="top-view">Top View</h4>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/Top%20View.png" data-desc-position="bottom"><img alt="TOP VIEW" src="../image/Top%20View.png"></a></p>
+<p align="center">
+  <a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="image/Top%20View.png" data-desc-position="bottom"><img src="image/Top%20View.png" alt="Top View" width="350"></a>
+</p>
+
 <h4 id="front-view">Front View</h4>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/Front%20View.png" data-desc-position="bottom"><img alt="FRONT VIEW" src="../image/Front%20View.png"></a></p>
 <h4 id="right-view">Right View</h4>
