--- a/05-design-ideation/index.html
+++ b/05-design-ideation/index.html
@@ -1423,11 +1423,8 @@
 <h4 id="isometric-view">Isometric View</h4>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/Isometric%20View.png" data-desc-position="bottom"><img alt="ISOMETRIC VIEW" src="../image/Isometric%20View.png"></a></p>
 <h2 id="smart-clap-light">Smart Clap Light</h2>
-<p>Modern design with app integration, touch controls, and voice assistant compatibility.</p>
-<p align="center">
-  <a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="image/SmartClapLight.png" data-desc-position="bottom"><img src="image/SmartClapLight.png" alt="Smart Clap Light" width="350"></a>
-</p>
-
+<p>Modern design with app integration, touch controls, and voice assistant compatibility.
+<a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/SmartClapLight.png" data-desc-position="bottom"><img alt="Smart Clap Light" src="../image/SmartClapLight.png"></a></p>
 <h2 id="accessible-clap-light">Accessible Clap Light</h2>
 <p>The Accessible Clap Light is a modern, sound-activated lighting device designed to improve convenience and independence for users of all abilities.
 <a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/PotentialProduct.png" data-desc-position="bottom"><img alt="Accessible Clap Light" src="../image/PotentialProduct.png"></a></p>
