--- a/05-design-ideation/index.html
+++ b/05-design-ideation/index.html
@@ -1424,7 +1424,7 @@
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/Isometric%20View.png" data-desc-position="bottom"><img alt="ISOMETRIC VIEW" src="../image/Isometric%20View.png"></a></p>
 <h2 id="smart-clap-light">Smart Clap Light</h2>
 <p>Modern design with app integration, touch controls, and voice assistant compatibility.
-<a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/SmartClapLight.png" data-desc-position="bottom"><img alt="Smart Clap Light" src="../image/SmartClapLight.png"></a></p>
+<a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="image/SmartClapLight.png" data-desc-position="bottom"><img src="image/SmartClapLight.png" alt="Smart Clap Light" width="300"></a></p>
 <h2 id="accessible-clap-light">Accessible Clap Light</h2>
 <p>The Accessible Clap Light is a modern, sound-activated lighting device designed to improve convenience and independence for users of all abilities.
 <a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/PotentialProduct.png" data-desc-position="bottom"><img alt="Accessible Clap Light" src="../image/PotentialProduct.png"></a></p>
