--- a/05-design-ideation/index.html
+++ b/05-design-ideation/index.html
@@ -1414,6 +1414,7 @@
 <h2 id="our-ranking">Our Ranking</h2>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/Ranking.png" data-desc-position="bottom"><img alt="Aaron's Ranking" src="../image/Ranking.png"></a></p>
 <h2 id="basic-clap-light-cadd-model">Basic Clap Light CADD Model</h2>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/BasicClapLight.png" data-desc-position="bottom"><img alt="BASIC CLAP LIGHT" src="../image/BasicClapLight.png"></a></p>
 <h4 id="top-view">Top View</h4>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/Top%20View.png" data-desc-position="bottom"><img alt="TOP VIEW" src="../image/Top%20View.png"></a></p>
 <h4 id="front-view">Front View</h4>
