deploy: e197937cd1ae68e4e13316debdb6ea2a04432fb6

--- a/05-design-ideation/index.html
+++ b/05-design-ideation/index.html
@@ -1428,7 +1428,7 @@
 <a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/SmartClapLight.png" data-desc-position="bottom"><img alt="Smart Clap Light" height="height" src="../image/SmartClapLight.png" width="300"></a></p>
 <h2 id="accessible-clap-light">Accessible Clap Light</h2>
 <p>The Accessible Clap Light is a modern, sound-activated lighting device designed to improve convenience and independence for users of all abilities.
-<a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/PotentialProduct.png" data-desc-position="bottom"><img alt="Accessible Clap Light" src="../image/PotentialProduct.png"></a></p>
+<a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/PotentialProduct.png" data-desc-position="bottom"><img alt="Accessible Clap Light" height="height" src="../image/PotentialProduct.png" width="300"></a></p>
 <h2 id="clap-light-animation-video">Clap Light Animation Video</h2>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/kkLrAL8x8Js?si=U7ngWnCirqjngvhX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
