--- a/05-design-ideation/index.html
+++ b/05-design-ideation/index.html
@@ -1414,7 +1414,7 @@
 <h2 id="our-ranking">Our Ranking</h2>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/Ranking.png" data-desc-position="bottom"><img alt="Aaron's Ranking" src="../image/Ranking.png"></a></p>
 <h2 id="basic-clap-light-cadd-model">Basic Clap Light CADD Model</h2>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/AllFourViews.png" data-desc-position="bottom"><img alt="BASIC CLAP LIGHT" src="../image/AllFourViews.png"></a></p>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/BasicClapLight.png" data-desc-position="bottom"><img alt="BASIC CLAP LIGHT" src="../image/BasicClapLight.png"></a></p>
 <h4 id="top-view">Top View</h4>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/Top%20View.png" data-desc-position="bottom"><img alt="TOP VIEW" src="../image/Top%20View.png"></a></p>
 <h4 id="front-view">Front View</h4>
@@ -1424,8 +1424,8 @@
 <h4 id="isometric-view">Isometric View</h4>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/Isometric%20View.png" data-desc-position="bottom"><img alt="ISOMETRIC VIEW" src="../image/Isometric%20View.png"></a></p>
 <h2 id="smart-clap-light">Smart Clap Light</h2>
-<p>Modern design with app integration, touch controls, and voice assistant compatibility.
-<a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/SmartClapLight.png" data-desc-position="bottom"><img alt="Smart Clap Light" height="height" src="../image/SmartClapLight.png" width="300"></a></p>
+<p>Modern design with app integration, touch controls, and voice assistant compatibility.</p>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/SmartClapLight.png" data-desc-position="bottom"><img alt="Smart Clap Light" height="height" src="../image/SmartClapLight.png" width="300"></a></p>
 <h2 id="accessible-clap-light">Accessible Clap Light</h2>
 <p>The Accessible Clap Light is a modern, sound-activated lighting device designed to improve convenience and independence for users of all abilities.
 <a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/PotentialProduct.png" data-desc-position="bottom"><img alt="Accessible Clap Light" height="height" src="../image/PotentialProduct.png" width="300"></a></p>
