deploy: c38a70d79d8609c974c5efd20d41fe9755835180

--- a/05-design-ideation/index.html
+++ b/05-design-ideation/index.html
@@ -1330,7 +1330,7 @@
 <h2 id="our-ranking">Our Ranking</h2>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/Ranking.png" data-desc-position="bottom"><img alt="Aaron's Ranking" src="../image/Ranking.png"></a></p>
 <h2 id="basic-clap-light-cadd-model">Basic Clap Light CADD Model</h2>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/BasicClapLight.png" data-desc-position="bottom"><img alt="BASIC CLAP LIGHT" src="../image/BasicClapLight.png"></a></p>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/AllFourViews.png" data-desc-position="bottom"><img alt="BASIC CLAP LIGHT" src="../image/AllFourViews.png"></a></p>
 <h2 id="smart-clap-light">Smart Clap Light</h2>
 <p>Modern design with app integration, touch controls, and voice assistant compatibility.</p>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/SmartClapLight.png" data-desc-position="bottom"><img alt="Smart Clap Light" height="height" src="../image/SmartClapLight.png" width="300"></a></p>
