deploy: 54cc3627f3fab7f980503cee6b06f6c983a3abe2

--- a/06-team-block-diagram/index.html
+++ b/06-team-block-diagram/index.html
@@ -784,7 +784,7 @@
 <li>How can the hub coordinate signals with minimal false triggers?</li>
 </ul>
 <h2 id="images">Images</h2>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/egr304team204blockdiagram.png" data-desc-position="bottom"><img alt="image caption" src="../image/egr304team204blockdiagram.png"></a></p>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/TeamBlockDiagram.png" data-desc-position="bottom"><img alt="image caption" src="../image/TeamBlockDiagram.png"></a></p>
 <h2 id="results">Results</h2>
 <ol>
 <li>The system is organized using a hub-and-spoke model, with Caleb’s board as the central controller.</li>
