--- a/02-Team-Organization/index.html
+++ b/02-Team-Organization/index.html
@@ -774,7 +774,7 @@
 <h2 id="team-charter">Team Charter</h2>
 <p>Team 204 is dedicated to designing a reliable and user-friendly clap-activated smart light that improves everyday living. We value collaboration, accountability, and clear communication while using each member’s strengths to achieve high technical standards. Our goal is to create innovative solutions that reflect ASU’s commitment to inclusion, discovery, and positive community impact.</p>
 <h2 id="product-mission-statement">Product Mission Statement</h2>
-<p>Our mission is to design and deliver reliable embedded systems that consistently perform under real-world conditions. We achieve this through clear communication, balanced teamwork, and leveraging each member’s strengths. By producing professional documentation and well-structured code, we ensure our system’s long-term usability and maintainability. Above all, we strive to create a collaborative and respectful culture where every member contributes, ensuring our projects embody both technical excellence and the vision of our team.</p>
+<p>Our mission is to create a reliable clap-activated lighting system that responds accurately under real-world conditions and enhances everyday convenience.</p>
 
 
 
