--- a/404.html
+++ b/404.html
@@ -289,7 +289,7 @@
   
     
   
-  Software Proposal
+  Software Design
 
       </a>
     </li>
@@ -531,7 +531,7 @@
         
   
   <span class="md-ellipsis">
-    Software Proposal
+    Software Design
   </span>
   
 
