--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
   
     
   
-  Software Proposal
+  Software Design
 
       </a>
     </li>
@@ -603,7 +603,7 @@
         
   
   <span class="md-ellipsis">
-    Software Proposal
+    Software Design
   </span>
   
 
