--- a/02-Team-Organization/index.html
+++ b/02-Team-Organization/index.html
@@ -309,7 +309,7 @@
   
     
   
-  Software Proposal
+  Software Design
 
       </a>
     </li>
@@ -605,7 +605,7 @@
         
   
   <span class="md-ellipsis">
-    Software Proposal
+    Software Design
   </span>
   
 
