--- a/05-design-ideation/index.html
+++ b/05-design-ideation/index.html
@@ -309,7 +309,7 @@
   
     
   
-  Software Proposal
+  Software Design
 
       </a>
     </li>
@@ -659,7 +659,7 @@
         
   
   <span class="md-ellipsis">
-    Software Proposal
+    Software Design
   </span>
   
 
