--- a/Appendix/App-Team-Org/index.html
+++ b/Appendix/App-Team-Org/index.html
@@ -305,7 +305,7 @@
   
     
   
-  Software Proposal
+  Software Design
 
       </a>
     </li>
@@ -549,7 +549,7 @@
         
   
   <span class="md-ellipsis">
-    Software Proposal
+    Software Design
   </span>
   
 
