--- a/Appendix/index.html
+++ b/Appendix/index.html
@@ -302,7 +302,7 @@
   
     
   
-  Software Proposal
+  Software Design
 
       </a>
     </li>
@@ -546,7 +546,7 @@
         
   
   <span class="md-ellipsis">
-    Software Proposal
+    Software Design
   </span>
   
 
