deploy: f9f341eb680f4567942ad023c3535b69f28055ca

--- a/02-Team-Organization/index.html
+++ b/02-Team-Organization/index.html
@@ -326,7 +326,7 @@
   
     
   
-  08 Resources
+  Resources
 
       </a>
     </li>
@@ -625,7 +625,7 @@
         
   
   <span class="md-ellipsis">
-    08 Resources
+    Resources
   </span>
   
 
