--- a/Appendix/App-Team-Org/index.html
+++ b/Appendix/App-Team-Org/index.html
@@ -322,7 +322,7 @@
   
     
   
-  08 Resources
+  Resources
 
       </a>
     </li>
@@ -569,7 +569,7 @@
         
   
   <span class="md-ellipsis">
-    08 Resources
+    Resources
   </span>
   
 
