--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
   
     
   
-  08 Resources
+  Resources
 
       </a>
     </li>
@@ -623,7 +623,7 @@
         
   
   <span class="md-ellipsis">
-    08 Resources
+    Resources
   </span>
   
 
