--- a/04-Product-Requirements/index.html
+++ b/04-Product-Requirements/index.html
@@ -326,7 +326,7 @@
   
     
   
-  08 Resources
+  Resources
 
       </a>
     </li>
@@ -661,7 +661,7 @@
         
   
   <span class="md-ellipsis">
-    08 Resources
+    Resources
   </span>
   
 
