--- a/05-design-ideation/index.html
+++ b/05-design-ideation/index.html
@@ -326,7 +326,7 @@
   
     
   
-  08 Resources
+  Resources
 
       </a>
     </li>
@@ -679,7 +679,7 @@
         
   
   <span class="md-ellipsis">
-    08 Resources
+    Resources
   </span>
   
 
