deploy: 4bb8f26f7d8d891969478495cb2c33c5f76e6e39

--- a/05-design-ideation/index.html
+++ b/05-design-ideation/index.html
@@ -343,7 +343,7 @@
   
     
   
-  09 Reflection
+  Reflection
 
       </a>
     </li>
@@ -699,7 +699,7 @@
         
   
   <span class="md-ellipsis">
-    09 Reflection
+    Reflection
   </span>
   
 
