--- a/07-Software Design/index.html
+++ b/07-Software Design/index.html
@@ -343,7 +343,7 @@
   
     
   
-  09 Reflection
+  Reflection
 
       </a>
     </li>
@@ -714,7 +714,7 @@
         
   
   <span class="md-ellipsis">
-    09 Reflection
+    Reflection
   </span>
   
 
