deploy: 646566e931001b50592f293ab065ca37e5f54b23

--- a/09-Reflection/index.html
+++ b/09-Reflection/index.html
@@ -786,12 +786,14 @@
 <li>The difference between different types of pins (PWM, ADC, DAC, etc.)</li>
 </ul>
 <h3 id="what-you-should-know">What You Should Know</h3>
-<p>For future students:
-1. Ask others for help. Trust me, nobody knows what they're doing, so if you find someone who does dont be afraid to ask questions.
-2. Helping other students if you feel like you have somewhat of a grasp on something is essential to improving that understanding. Maybe you'll come across a problem that you didn't have--but maybe solving that problem will help you in the future.
-3. Do the labs before class. Dont get caught off guard by the hardest lab of all time... you'll get a zero.
-4. If your system isn't outputting a signal, use a multimeter and check for power between components in case one component is fried and needs to be replaced.
-5. Use as minimal an amount of wires as possible (this makes it easier to follow and therefore debug).</p>
+<p>For future students:</p>
+<ol>
+<li>Ask others for help. Trust me, nobody knows what they're doing, so if you find someone who does dont be afraid to ask questions.</li>
+<li>Helping other students if you feel like you have somewhat of a grasp on something is essential to improving that understanding. Maybe you'll come across a problem that you didn't have--but maybe solving that problem will help you in the future.</li>
+<li>Do the labs before class. Dont get caught off guard by the hardest lab of all time... you'll get a zero.</li>
+<li>If your system isn't outputting a signal, use a multimeter and check for power between components in case one component is fried and needs to be replaced.</li>
+<li>Use as minimal an amount of wires as possible (this makes it easier to follow and therefore debug).</li>
+</ol>
 
 
 
